--- a/app/views/books/edit.erb
+++ b/app/views/books/edit.erb
@@ -1,7 +1,7 @@
 <% if @book.errors.any? %>
     <h4 class="error"><%= @book.errors.full_messages.to_sentence %></h4>
 <% end %>
-<h2>Create new book</h2><br><br>
+<h2>Edit book details</h2><br><br>
 <%= form_with model: @book, local: true do | f |  %>
     <%= f.label :title %><br><br>
     <%= f.text_field :title, class: @book.errors.any? ? "error-field" : nil %><br><br>
@@ -11,16 +11,10 @@
 
     <%= f.label :description %><br><br>
     <%= f.text_area :description %><br><br>
-
+    
     Choose a genre:<br><br>
    
     <%= f.collection_select :genre_id, Genre.all, :id, :name %><br><br>
-
-    <h4>Add a New Quote:</h4>
-    <%= f.fields_for :quotes do |q| %>  
-        <%= q.label "Quote" %><br><br>
-        <%= q.text_area :content %><br><br>
-    <% end %>
-    <br>
-    <%= f.submit "Create Book" %>
+    
+    <%= f.submit %>
 <% end %>
