--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,44 +1,31 @@
-<%= @book.title %>
-<%= @book.content %>
-<br>
-<br>
+<%= @book.title %><br><br>
+<%= @book.author %><br><br>
+<%= @book.description %><br><br>
+<%= @book.quotes %><br><br>
+
 <h4>Genre:</h4>
 <br>
-<% @book.genres.each do | cat | %>
-    <%= cat.name  %>
+<% @book.genres.each do | g | %>
+    <%= g.name  %>
 <% end %>
 
 <br>
 <h4>Quotes:</h4>
 <br>
 <ul>
-    <% @book.quotes.each do | quote | %>
-        <li><%= quote.user.username %> says: <%= quote.content %></li>
-    <% end %>
-</ul>
-
-
-<br>
-<ul>
-    <% @book.users.distinct.each do | user |  %>
-        <li><%= link_to user.username, user_path(user) %></li>
+    <% @book.quotes.each do | q | %>
+    <% binding.pry %>
+        <li><%= q.content %></li>
     <% end %>
 </ul>
 <br>
-<h4>Add a New Quote:</h4>
 <br>
-<%= form_for @book.quotes.build do | f | %>
-    <%= f.hidden_field :book_id %>
-    <br>    
-    <%= f.collection_select :user_id, User.all, :id, :username %>
-    <br>
-    <%= f.fields_for :user, User.new do | user | %>
-        <%= user.label :username %>
-        <%= user.text_field :username %>
-    <% end %>
-    <br>
-    <%= f.label :content, "Quote" %>
-    <%= f.text_field :content %>
+<%= form_with model: @book do | f | %>
+    <h4>Add a New Quote:</h4>
+    <%= f.fields_for :quotes do | q | %>  
+        <%= q.label "Quote" %><br><br>
+        <%= q.text_area :content %><br><br>
+    <%end %>
     <br>
     <%= f.submit %>
 <%end %>
