made some change, fixed a few things

--- a/app/views/application/home.erb
+++ b/app/views/application/home.erb
@@ -1,12 +1,12 @@
 <% if user_signed_in? %>
     <h1>Hi <%= current_user.username %>! Welcome to Lemondrop</h1>
+    
+    <%= link_to "See all your books", books_path %>
     <%= button_to "Create New Book", new_book_path, method: "get" %>
 <% else %>
     <h1>Hi! Welcome to Lemondrop</h1><br><br>
     <h4>Please sign in or sign up above</h4>
 <% end %>
-
-
 
 <!--Here a user should see a dropdown of genres-->
 <!--Here a user images of books with links to the book show page-->
