--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -13,8 +13,9 @@
     <%= f.text_area :description %><br><br>
 
     Choose a genre:<br><br>
-   
-    <%= f.collection_select :genre_id, Genre.all, :id, :name %><br><br>
+    
+    <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+    
 
     <h4>Add a New Quote:</h4>
     <%= f.fields_for :quotes do |q| %>  
