--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,31 +1,19 @@
 <%= @book.title %><br><br>
 <%= @book.author %><br><br>
 <%= @book.description %><br><br>
-<%= @book.quotes %><br><br>
 
 <h4>Genre:</h4>
+    <%= @book.genres.name %>
 <br>
-<% @book.genres.each do | g | %>
-    <%= g.name  %>
-<% end %>
-
 <br>
 <h4>Quotes:</h4>
 <br>
 <ul>
     <% @book.quotes.each do | q | %>
-    <% binding.pry %>
         <li><%= q.content %></li>
     <% end %>
 </ul>
 <br>
 <br>
-<%= form_with model: @book do | f | %>
-    <h4>Add a New Quote:</h4>
-    <%= f.fields_for :quotes do | q | %>  
-        <%= q.label "Quote" %><br><br>
-        <%= q.text_area :content %><br><br>
-    <%end %>
-    <br>
-    <%= f.submit %>
-<%end %>
+<%= link_to "Add quote", new_book_quote_path(@book) %>
+
