--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -3,7 +3,10 @@
 <%= @book.description %><br><br>
 
 <h4>Genre:</h4>
-    <%= @book.genres.name %>
+    <% @book.genres.each do | g | %>
+        <li><%= g.name %></li>
+    <% end %>
+
 <br>
 <br>
 <h4>Quotes:</h4>
@@ -15,5 +18,8 @@
 </ul>
 <br>
 <br>
-<%= link_to "Add quote", new_book_quote_path(@book) %>
+<%= button_to "Add quote", new_book_quote_path(@book), method: "get" %>
+<%= button_to "Edit book", edit_book_path(@book), method: "get" %>
+<h6><%= button_to("Delete", @book, method: :delete, data:{confirm: "Are you sure?"}) %></h6>
+
 
