--- a/app/views/books/edit.erb
+++ b/app/views/books/edit.erb
@@ -1,7 +1,4 @@
-<% if @book.errors.any? %>
-    <h4 class="error"><%= @book.errors.full_messages.to_sentence %></h4>
-<% end %>
-<h2>Edit book details</h2><br><br>
+<h2>Create new book</h2><br><br>
 <%= form_with model: @book, local: true do | f |  %>
     <%= f.label :title %><br><br>
     <%= f.text_field :title, class: @book.errors.any? ? "error-field" : nil %><br><br>
@@ -11,10 +8,18 @@
 
     <%= f.label :description %><br><br>
     <%= f.text_area :description %><br><br>
-    
+
     Choose a genre:<br><br>
-   
-    <%= f.collection_select :genre_id, Genre.all, :id, :name %><br><br>
     
-    <%= f.submit %>
+    <%= f.collection_select :genre_ids, Genre.all, :id, :name %><br><br>
+    <%= f.fields_for :genres, @book.genres.build do | g | %>
+        <%= g.label :name, "Do you want to create a Genre?" %>
+        <%= g.text_field :name %>
+    <% end %>
+    <%#= f.collection_select :genre_id, Genre.all, :id, :name %>
+    
+    <h4>Edit Quote:</h4> 
+        <%= f.text_area :content %><br><br>
+    <br>
+    <%= f.submit "Create Book" %>
 <% end %>
