--- a/app/views/books/edit.erb
+++ b/app/views/books/edit.erb
@@ -2,7 +2,7 @@
 <%= form_with model: @book, local: true do | f |  %>
     <%= f.label :title %><br><br>
     <%= f.text_field :title, class: @book.errors.any? ? "error-field" : nil %><br><br>
-  
+
     <%= f.label :author %><br><br>
     <%= f.text_field :author %><br><br>
 
@@ -10,16 +10,12 @@
     <%= f.text_area :description %><br><br>
 
     Choose a genre:<br><br>
-    
+
     <%= f.collection_select :genre_ids, Genre.all, :id, :name %><br><br>
     <%= f.fields_for :genres, @book.genres.build do | g | %>
         <%= g.label :name, "Do you want to create a Genre?" %>
         <%= g.text_field :name %>
     <% end %>
     <%#= f.collection_select :genre_id, Genre.all, :id, :name %>
-    
-    <h4>Edit Quote:</h4> 
-        <%= f.text_area :content %><br><br>
-    <br>
-    <%= f.submit "Create Book" %>
+    <%= f.submit "Edit Book" %>
 <% end %>
