--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -13,7 +13,7 @@
 <br>
 <ul>
     <% @book.quotes.each do | q | %>
-        <li><%= q.content %></li>
+    <%=link_to (q.content), quote_path(q.id) %>
     <% end %>
 </ul>
 <br>
@@ -21,5 +21,3 @@
 <%= button_to "Add quote", new_book_quote_path(@book), method: "get" %>
 <%= button_to "Edit book", edit_book_path(@book), method: "get" %>
 <h6><%= button_to("Delete", @book, method: :delete, data:{confirm: "Are you sure?"}) %></h6>
-
-
