--- a/app/views/layouts/_nav.erb
+++ b/app/views/layouts/_nav.erb
@@ -8,6 +8,7 @@
         <% end %>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
             <li><%= link_to "Home Page", root_path(current_user) %></li>
+            <li><%= link_to "Back", :back %></li>
     <% else %>
             <li><%= link_to "Sign In", new_user_session_path %></li>
             <li><%= link_to "Sign Up", new_user_registration_path %></li>
