--- a/app/views/quotes/edit.erb
+++ b/app/views/quotes/edit.erb
@@ -3,5 +3,7 @@
     
     <%= f.text_area :content %><br><br>
   
-    <%= f.submit "Edit quote" %>
+    <%= f.submit "Edit Quote" %>
 <% end %>
+
+<!-- , class: @quote.errors.any? ? "error-field" : nil  -->
