--- a/app/views/books/edit.erb
+++ b/app/views/books/edit.erb
@@ -1,21 +1,1 @@
-<h3>Edit new book</h3><br><br>
-<%= form_with model: @book, local: true do | f |  %>
-    <%= f.label :title %><br><br>
-    <%= f.text_field :title, class: @book.errors.any? ? "error-field" : nil %><br><br>
-  
-    <%= f.label :author %><br><br>
-    <%= f.text_field :author %><br><br>
-
-    <%= f.label :description %><br><br>
-    <%= f.text_area :description %><br><br>
-
-    <h4>Choose a genre:</h4><br>
-    
-    <%= f.collection_select :genre_ids, Genre.all, :id, :name %><br><br>
-        <%= f.fields_for :genres, @book.genres.build do | g | %>
-            <%= g.label :name, "Do you want to add a Genre?" %><br><br>
-            <%= g.text_field :name %><br><br>
-    <% end %>
-    
-    <%= f.submit "Edit Book" %>
-<% end %>
+<%= render "form" %>
