--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,32 +1,1 @@
-<% if @book.errors.any? %>
-    <h4 class="error"><%= @book.errors.full_messages.to_sentence %></h4>
-<% end %>
-<h2>Create new book</h2><br><br>
-<%= form_with model: @book, local: true do | f |  %>
-    <%= f.label :title %><br><br>
-    <%= f.text_field :title, class: @book.errors.any? ? "error-field" : nil %><br><br>
-  
-    <%= f.label :author %><br><br>
-    <%= f.text_field :author %><br><br>
-
-    <%= f.label :description %><br><br>
-    <%= f.text_area :description %><br><br>
-
-    Choose a genre:<br><br>
-    
-    <%= f.collection_select :genre_ids, Genre.all, :id, :name %><br><br>
-    <%= f.fields_for :genres, @book.genres.build do | g | %>
-        <%= g.label :name, "Do you want to create a Genre?" %>
-        <%= g.text_field :name %>
-    <% end %>
-    <%#= f.collection_select :genre_id, Genre.all, :id, :name %>
-    
-
-    <h4>Add a New Quote:</h4>
-    <%= f.fields_for :quotes do |q| %>  
-        <%= q.label "Quote" %><br><br>
-        <%= q.text_area :content %><br><br>
-    <% end %>
-    <br>
-    <%= f.submit "Create Book" %>
-<% end %>
+<%= render "form" %>
