--- a/app/views/quotes/edit.erb
+++ b/app/views/quotes/edit.erb
@@ -1,4 +1,4 @@
-<h2>Edit new quote</h2><br><br>
+<h2>Edit quote</h2><br><br>
 <%= form_with model: @quote, local: true do | f |  %>
     
     <%= f.text_area :content %><br><br>
