--- a/app/views/quotes/index.erb
+++ b/app/views/quotes/index.erb
@@ -1,9 +1,10 @@
-<h3>Here are all your quotes</h3>
+<h3>Here are all your quotes</h3><br>
 
 <ul>
-<% @quotes.each do |q| %>
-    <li><%= q.content %></li><br><br>
-  <% end %>
+    <% @quotes.each do | q | %>
+        <li><%= q.content %></li><br><br>
+        <%#= button_to "See Book", book_path(@book, q), method: "get" %><br>
+    <% end %>
 </ul>
 
 <!--How can I link these quotes to the book they belong to and if clicked the user is taken to the book show page?>
