--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,25 +1,27 @@
+<h5>Title:</h5>
 <%= @book.title %><br><br>
+<h5>Author:</h5>
 <%= @book.author %><br><br>
+<h5>Descripton:</h5>
 <%= @book.description %><br><br>
 
-<h4>Genre:</h4>
-    <% @book.genres.each do | g | %>
-        <li><%= g.name %></li><br>
-    <% end %>
-<br>
+ <h5>Genre:</h5>
+ <% @book.book_genres.each do | bg | %>
+    <li><%= bg.genre.name %></li><br>
+<% end %>    
 
-<h4>Sub-Genre:</h4>
-    <% @book.book_genres.each do | bg | %>
-        <li><%= bg.sub_genre %></li><br>
-    <% end %>    
+<h5>Sub-Genre:</h5>
+<% @book.book_genres.each do | bg | %>
+    <li><%= bg.sub_genre %></li><br>
+<% end %>    
 <br>
-<h4>Quotes:</h4>
+<h5>Quotes:</h5>
 <br>
 <ul>
     <% @book.quotes.each do | q | %>
         <li><%= q.content %></li><br><br>
         <%= button_to "Edit Quote", edit_book_quote_path(@book, q), method: "get" %><br>
-        <%= button_to "Delete Quote", quote_path(q), method: "delete"%><br>
+        <%= button_to "Delete Quote", quote_path(q), method: "delete" %><br>
     <% end %>
 </ul>
 <br>
@@ -27,11 +29,3 @@
 <%= button_to "Add Quote", new_book_quote_path(@book), method: "get" %><br><br>
 <%= button_to "Edit Book", edit_book_path(@book), method: "get" %><br><br>
 <%= button_to("Delete Book", @book, method: :delete, data:{confirm: "Are you sure?"}) %>
-
-
-<!--@book.bookgenres.is_subgenre.each do |sg|
-	sg.name
-end
-@book.bookgenres.main_genre.each do |sg|
-	sg.name
-end-->
