Removed subgenre and tweaked code

--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,39 +1,2 @@
 <h2>Create new book</h2><br><br>
-<% if @book.errors.any? %>
-    <h4 class="error"><%= @book.errors.full_messages.to_sentence %></h4>
-<% end %>
-<%= form_with model: @book, local: true do | f |  %>
-    <%= f.label :title %><br><br>
-    <%= f.text_field :title, class: @book.errors.any? ? "error-field" : nil %><br><br>
-  
-    <%= f.label :author %><br><br>
-    <%= f.text_field :author %><br><br>
-
-    <%= f.label :description %><br><br>
-    <%= f.text_area :description %><br><br>
-
-    <%= f.fields_for @book.user_books.build do | ub | %>
-        <%= f.label :current_book %>
-        <%= f.check_box :current_book %>
-    <% end %>
-
-    Choose a genre:<br><br>
-    
-    <%= f.fields_for :genres, @book.genres.build do | genre | %>
-        <%= genre.label "Genre" %>
-        <%= genre.text_field :name %><br>
-        
-    <% end %>
-    
-    <%= f.fields_for @book.book_genres.build do | bg | %>
-        <%= bg.label "Sub-Genre" %><%= bg.text_field :sub_genre %><br>
-    <% end %><br><br>
-
-    <h4>Add a Quote:</h4>
-    <%= f.fields_for :quotes do |q| %>  
-        <%= q.label "Quote" %><br><br>
-        <%= q.text_area :content %><br><br>
-    <% end %>
-    <br>
-    <%= f.submit %>
-<% end %>
+<%= render "form" %>
