--- a/app/views/quotes/new.erb
+++ b/app/views/quotes/new.erb
@@ -1,9 +1,2 @@
 <h2>Create new quote</h2><br><br>
-<%= form_with model: @book.quotes.build, local: true do | f |  %>
-<%= f.hidden_field :book_id, value: @book.id %>
-    <%= f.label "New Quote" %><br><br>
-    <%= f.text_area :content %><br><br>
-  
-    <%= f.submit "Create quote" %>
-<% end %>
-<%#= f.text_area :content, class: @quote.errors.any? ? "error-field" : nil %>
+<%= render "form" %>
