--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -5,6 +5,10 @@
 <h5>Descripton:</h5>
 <%= @book.description %><br><br>
 
+<h5>Created by:</h5>
+<%= @book.user_books.first.username %>
+
+
  <h5>Genre:</h5>
  <% @book.book_genres.each do | bg | %>
     <li><%= bg.genre.name %></li><br>
