--- a/app/views/quotes/_form.erb
+++ b/app/views/quotes/_form.erb
@@ -1,6 +1,8 @@
-<%= form_with model: @book.quotes.build, local: true do | f |  %>
-    <%= f.hidden_field :book_id, value: @book.id %>
-    <%= f.label :quote %><br><br>
-    <%= f.text_area :content %><br><br>
-    <%= f.submit %>
-<% end %>
+<div class="form">
+    <%= form_with model: @book.quotes.build, local: true do | f |  %>
+        <%= f.hidden_field :book_id, value: @book.id %>
+        <%= f.label :quote %>:<br><br>
+        <%= f.text_area :content, size: "60x6" %><br><br>
+        <%= f.submit %>
+    <% end %>
+</div>
