--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,4 +1,4 @@
-<div id="book-show-container">
+<div id="main-container">
     <h5><%= @book.title %></h5>
     <br>
     <p><%= @book.author %></p>
