--- a/app/views/layouts/_nav.erb
+++ b/app/views/layouts/_nav.erb
@@ -1,33 +1,19 @@
 <div class="nav_bar">   
-    <% if user_signed_in? %>        
-        <nav class="navbar navbar-expand-lg navbar-light yellow-light">
-            <a class="navbar-brand" href="#">Lemondrop</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <% if current_user.provider == "" %>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" <%= link_to "Home", root_path(current_user) %><span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" <%= link_to "Back", :back %><span  class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" <%= link_to "Edit Your Profile",    edit_user_registration_path(current_user) %><span     class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" <%= link_to "Sign Out",     destroy_user_session_path, method: :delete %><span     class="sr-only">(current)</span></a>
-                        </li>
-            <% end %>
-            <% else %>
-                <li class="nav-item active">
-                    <a class="nav-link" <%= link_to "Sign In", new_user_session_path %></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" <%= link_to "Sign Up", new_user_registration_path %></a>
-                    </ul>
-        </nav>
+    <% if user_signed_in? %>
+        <% if current_user.provider == "" %> 
+            <nav>              
+                <ul>
+                    <a <%= link_to "Home |", root_path(current_user), style: "color: #F4EDE2;" %></a>
+                    <a <%= link_to "Back |", :back, style: "color: #F4EDE2;" %></a>
+                    <a <%= link_to "Edit Your Profile |", edit_user_registration_path(current_user), style: "color: #F4EDE2;" %></a>
+                    <a <%= link_to "Sign Out", destroy_user_session_path, method: :delete, style: "color: #F4EDE2;" %></a>
+                </ul>
+        <% end %>
+        <% else %>
+            <ul>
+                <a <%= link_to "Sign In |", new_user_session_path, style: "color: #F4EDE2;" %></a>
+                <a <%= link_to "Sign Up", new_user_registration_path, style: "color: #F4EDE2;" %></a>
+            </ul>
+            </nav>
     <% end %>         
 </div>
