--- a/app/views/quotes/index.erb
+++ b/app/views/quotes/index.erb
@@ -1,8 +1,14 @@
-<h3>Here are all your quotes</h3><br>
-<ul>
+<br><br>
+<h5>Here are all your quotes</h5><br>
     <% @quotes.each do | q | %>
-        <li><%= q.content %></li><br>
-        <%= button_to "Delete Quote", quote_path(q), method: "delete" %><br><br>
-        <%= button_to "See Book", book_path(q.book), method: "get" %><br>
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text"><%= q.content %></p>
+            </div>
+            <a class="badge badge-light" <%= link_to "Delete Quote", quote_path(q), method: "delete" %></a><br>
+            <a class="badge badge-light" <%= link_to "See Book", book_path(q.book), method: "get" %></a>
+        </div>
     <% end %>
-</ul>
+
+
+            
